<resources>
    <string name="app_name">BCCL</string>
    <string name="e_mail_or_phone_number">E-Mail</string>
    <string name="password">Password</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="signup">SignUp</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="create_my_account">Create Account</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="log_in">Log In</string>
    <string name="name">Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="phone_no">Phone No.</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="otp_verification">OTP VERIFICATION</string>
    <string name="we_have_sent_you_a_one_time_password_on_your_registered_mobile_number">We have sent you a one time password on your registered mobile number.</string>
    <string name="resend_code">Resend Code</string>
    <string name="didn_t_receive_code">Didn\'t receive code?</string>
    <string name="verify">Verify</string>
    <string name="sign_out">Sign Out</string>

    <string-array name="gov_id_options">
        <item>Aadhar Card</item>
        <item>PAN Card</item>
        <item>Passport</item>
        <item>Voter ID</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pdf_generation">PdfGenerationActivity</string>

</resources>