<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".OTPVerificationActivity">

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="40dp"
        android:layout_height="46dp"
        android:background="@drawable/otp"
        android:ems="10"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.299"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phnnumber"
        app:layout_constraintVertical_bias="0.22" />

    <EditText
        android:id="@+id/editTextText1"
        android:layout_width="40dp"
        android:layout_height="46dp"
        android:background="@drawable/otp"
        android:ems="10"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phnnumber"
        app:layout_constraintVertical_bias="0.22" />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="40dp"
        android:layout_height="46dp"
        android:background="@drawable/otp"
        android:ems="10"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phnnumber"
        app:layout_constraintVertical_bias="0.22" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="40dp"
        android:layout_height="46dp"
        android:background="@drawable/otp"
        android:ems="10"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phnnumber"
        app:layout_constraintVertical_bias="0.22" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="40dp"
        android:layout_height="46dp"
        android:background="@drawable/otp"
        android:ems="10"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phnnumber"
        app:layout_constraintVertical_bias="0.22"
        android:maxLength="1" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="371dp"
        android:layout_height="220dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/_36528085_4b7be0fd_aa0b_4383_9f5f_95eb098746c2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="189dp"
        android:layout_height="37dp"
        android:fontFamily="@font/latoextrabold"
        android:gravity="center"
        android:text="@string/otp_verification"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.156" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/latoregular"
        android:text="@string/we_have_sent_you_a_one_time_password_on_your_registered_mobile_number"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/phnnumber"
        android:layout_width="158dp"
        android:layout_height="21dp"
        android:layout_marginBottom="296dp"
        android:background="@drawable/emailtextfield"
        android:fontFamily="@font/latobold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="40dp"
        android:layout_height="46dp"
        android:background="@drawable/otp"
        android:ems="10"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phnnumber"
        app:layout_constraintVertical_bias="0.22" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verifybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/loginbutton"
        android:fontFamily="@font/latobold"
        android:gravity="center"
        android:text="@string/verify"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phnnumber"
        app:layout_constraintVertical_bias="0.705" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/verifybutton"
        app:layout_constraintEnd_toEndOf="@+id/verifybutton"
        app:layout_constraintStart_toStartOf="@+id/verifybutton"
        app:layout_constraintTop_toTopOf="@+id/verifybutton" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/latoregular"
        android:text="@string/didn_t_receive_code"
        app:layout_constraintBottom_toTopOf="@+id/verifybutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.389"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ResendCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/latobold"
        android:text="@string/resend_code"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/verifybutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>